removed unused codes & changed formatting scheme

--- a/test/index.html
+++ b/test/index.html
@@ -3,13 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Editor</title>
     <link rel="stylesheet" href="../src/style.css" />
-    <link rel="stylesheet" href="./myStyle.css" />
+    <link rel="stylesheet" href="./main.css" />
     <!-- <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/src/core.js" defer></script>
     <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/src/JavaScript.js" defer></script> -->
     <!-- <script src="../src/core.js" defer></script>
@@ -17,63 +14,40 @@
     <script src="../src/core.js" defer></script>
     <script src="../src/HTML.js" defer></script>
     <script src="../src/JavaScript.js" defer></script>
-    <script src="./test.js" defer></script>
   </head>
+
   <body>
     <h1>Colorful</h1>
     <p>A JavaScript library that higlights JavaScript codes</p>
     <p>Examples:</p>
     <div class="container">
-      <div class="b1">
-        <pre class="code-cf" id="editor-output"></pre>
-        <textarea
-          id="editor-active"
-          placeholder="Paste your code here"
-          spellcheck="false"
-        ></textarea>
-      </div>
-      <div class="blank block">
-        <p>CSS Code</p>
-        <pre class="cf-CSS">
-*[class^="cf"] {
-	display: flex;
-	resize: both;
-	color: #fff;
-	font-family: Consolas, 'Courier New', monospace;
-	line-height: normal;
-	outline: none;
-	font-size: 16px;
-	background-color: #101515;
-	white-space: pre;
-	justify-content: flex-start;
-	padding: 10px;
-	resize: none;
-	overflow: auto;
-	
-}
-.code-cf {
-	display: block;
-	background-color: #101515;
-	position: relative;
-	padding-left: 10px;
-	tab-size: 4;
-	width: min-content;
-	resize: none;
-}
-				</pre
-        >
-      </div>
       <div class="block">
         <p>HTML Code</p>
         <pre class="cf-HTML">
-&lt;head>
-	&lt;script src="../src/core.js" defer>&lt;/script>
-	&lt;script src="../src/HTML.js" defer>&lt;/script>
-&lt;/head></pre
-        >
-      </div>
+&lt;html lang="en">
+	&lt;head>
+		&lt;meta charset="UTF-8" />
+		&lt;meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		&lt;meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		&lt;title>Editor&lt;/title>
+		&lt;link rel="stylesheet" href="../src/style.css" />
+		&lt;link rel="stylesheet" href="./main.css" />
+		&lt;!-- &lt;script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/src/core.js" defer>&lt;/script>
+		&lt;script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/src/JavaScript.js" defer>&lt;/script> -->
+		&lt;!-- &lt;script src="../src/core.js" defer>&lt;/script>
+		&lt;script src="../src/JavaScript.js" defer>&lt;/script> -->
+		&lt;script src="../src/core.js" defer>&lt;/script>
+		&lt;script src="../src/HTML.js" defer>&lt;/script>
+		&lt;script src="../src/JavaScript.js" defer>&lt;/script>
+	&lt;/head>
+	&lt;body>
+		&lt;h1>Colorful!&lt;/h1>
+	&lt;/body>
+&lt;/html>
+</pre>
+      </di>
       <div class="block">
-        <p>The source code of this project with line numbers:</p>
+        <p>The source code of JS parser with line numbers:</p>
         <pre class="cf-JS" lineNumbering>
 (function (w) {
 	// check for core.js
@@ -84,9 +58,9 @@
 		return;
 	}
 
+	// prettier-ignore
 	// RegExes
-	const KeywordRE =
-		/^(async|await|break|case|catch|class|const|continue|debugger|default|delete|do|else|export|extends|false|finally|for|function|if|implements|import|in|instanceof|interface|let|new|null|package|return|static|super|switch|this|throw|true|try|typeof|undefined|var|void|while|with|yield)$/;
+	const KeywordRE = ["async","await","break","case","catch","class","const","continue","debugger","default","delete","do","else","export","extends","false","finally","for","function","if","implements","import","in","instanceof","interface","let","new","null","package","return","static","super","switch","this","throw","true","try","typeof","undefined","var","void","while","with","yield"];
 	const operatorRE = /[-=+*/%!<>&|:?]/;
 	const nameCharRE = /^[\wÀ-￿$]+/u; // \w, $ and from \u00c0 to \uffff
 
@@ -97,9 +71,10 @@
 	const commentRE = /(\/\*[\s\S]*?\*\/|\/\*[\s\S]*|\/\/.*)/;
 	const regexRE =
 		/^\/((?![*+?])(?:[^\r\n[/\\]|\\.|\[(?:[^\r\n\]\\]|\\.)*\])+)\/[gimyus]*/;
+
+	// prettier-ignore
 	// builtIn objects
-	const builtInObject =
-		/^(AggregateError|Buffer|Array|ArrayBuffer|AsyncFunction|AsyncGenerator|AsyncGeneratorFunction|Atomics|BigInt|BigInt64Array|BigUint64Array|Boolean|DataView|Date|Error|EvalError|Float32Array|Float64Array|Function|Generator|GeneratorFunction|Int16Array|Int32Array|Int8Array|InternalError|Intl|JSON|Map|Math|Number|Object|Promise|Proxy|RangeError|ReferenceError|Reflect|RegExp|Set|SharedArrayBuffer|String|Symbol|SyntaxError|TypeError|URIError|Uint16Array|Uint32Array|Uint8Array|Uint8ClampedArray|WeakMap|WeakSet|WebAssembly)$/;
+	const builtInObject = ["AggregateError","Buffer","Array","ArrayBuffer","AsyncFunction","AsyncGenerator","AsyncGeneratorFunction","Atomics","BigInt","BigInt64Array","BigUint64Array","Boolean","DataView","Date","Error","EvalError","Float32Array","Float64Array","Function","Generator","GeneratorFunction","Int16Array","Int32Array","Int8Array","InternalError","Intl","JSON","Map","Math","Number","Object","Promise","Proxy","RangeError","ReferenceError","Reflect","RegExp","Set","SharedArrayBuffer","String","Symbol","SyntaxError","TypeError","URIError","Uint16Array","Uint32Array","Uint8Array","Uint8ClampedArray","WeakMap","WeakSet","WebAssembly"];
 	const whitespace = /[\s]+/;
 	// types of tokens
 	const T_NAME = "JS-NAME";
@@ -183,7 +158,7 @@
 			prevTkn = tokens.slice(-1)[0] || emptyToken; // previous token
 			/* after matching a word there will be a non-unicode characters (punctuations, operators, etc.) that will follow word. Following code analyses it */
 			char = text[i]; // next character
-			const next2 = text.substr(i, 2); // next two characters
+			const next2 = text.substring(i, i + 2); // next two characters
 			if (whitespace.test(char)) {
 				// finds next whitespace characters
 				const space = text.substring(i).match(whitespace)[0];
@@ -201,11 +176,7 @@
 				let slashes = 0; // number of backslashes
 				// regular expression that is used to match all characters except the string determiner and backslashes
 				const re =
-					char == "'"
-						? /^[^'\\]+/
-						: char == '"'
-						? /^[^"\\]+/
-						: /^[^`${]+/;
+					char == "'" ? /^[^'\\]+/ : char == '"' ? /^[^"\\]+/ : /^[^`${]+/;
 				while (i < len) {
 					str = text.substring(i).match(re);
 					if (str) {
@@ -225,7 +196,7 @@
 						// even number of backslashes means string character is not escaped
 						if (slashes % 2 == 0) break;
 						else slashes = 0; // else reset it
-					} else if (text.substr(i, 2) == "${") {
+					} else if (text.substring(i, i + 2) == "${") {
 						// only for multiline string
 						// string interpolation ahead
 						addToken(T_OPERATOR, "${"); // adds `${` as operator
@@ -299,10 +270,7 @@
 						for (let k = tokens.length - 2; k >= 0; k--) {
 							const tk = tokens[k];
 							toReadArray.push(tk);
-							if (
-								tk.type == T_OTHER &&
-								tk.scopeLevel == initialScopeLevel
-							) {
+							if (tk.type == T_OTHER && tk.scopeLevel == initialScopeLevel) {
 								// reached `(`
 								tokens.splice(k);
 								break;
@@ -333,8 +301,7 @@
 				const pprev = tokens.slice(-2)[0] || emptyToken;
 				const isFunctionClause =
 					(prev.token.match(/function\s*$/) && prevt == T_KEY) ||
-					(pprev.token.match(/function\s*$/) &&
-						pprev.type == T_KEY) ||
+					(pprev.token.match(/function\s*$/) && pprev.type == T_KEY) ||
 					scopeTree.slice(-1)[0] == "class";
 				addToken(T_OTHER);
 				i++;
@@ -394,8 +361,7 @@
 			const tl = tokens.length;
 			if (
 				tokens[tl - 1].type == (tokens[tl - 2] || {}).type &&
-				tokens[tl - 1].scopeLevel ==
-					(tokens[tl - 2] || {}).scopeLevel &&
+				tokens[tl - 1].scopeLevel == (tokens[tl - 2] || {}).scopeLevel &&
 				tokens[tl - 1].type != T_OTHER
 			) {
 				tokens[tl - 2].token += tokens[tl - 1].token;
@@ -469,9 +435,8 @@
 			const prevt = (prevTkn.token || "").trim();
 			const p2revt = tokens[tokens.length - 2] || {};
 			if (
-				KeywordRE.test(word) || // global keywords
-				((word == "get" || word == "set") &&
-					scopeTree.slice(-1)[0] == "class") // get/set inside class scope
+				KeywordRE.indexOf(word) >= 0 || // global keywords
+				((word == "get" || word == "set") && scopeTree.slice(-1)[0] == "class") // get/set inside class scope
 			) {
 				// Keyword
 				addToken(T_KEY, word);
@@ -483,7 +448,7 @@
 					scope = word;
 				}
 			} else if (
-				(builtInObject.test(word) &&
+				(builtInObject.indexOf(word) >= 0 &&
 					!/^(function|var|const|let|interface)/.test(prevt) &&
 					!/\.$/.test(prevt)) ||
 				(word == "constructor" && scopeTree.slice(-1)[0] == "class")
@@ -505,26 +470,22 @@
 	w["Colorful"]["tokenizers"]["JS"] = tokenize;
 
 	// add types of token used here to tokenType object for parser to classify tokens
-	w["Colorful"]["tokenTypes"] = Object.assign(
-		w["Colorful"]["tokenTypes"],
-		{
-			[T_NAME]: "name js-name",
-			[T_OBJECTPROP]: "objprop",
-			[T_OBJECTPROPINOBJ]: "objprop object-prop-in-obj",
-			[T_KEY]: "keyword js-keyword",
-			[T_COMMENT]: "comment js-comment",
-			[T_NUMBER]: "number js-number",
-			[T_ARGUMENT]: "argument",
-			[T_BUILTIN]: "builtIn js-builtIn",
-			[T_METHOD]: "method js-method",
-			[T_METHODASOBJPROP]: "method js-method method-as-obj-prop",
-			[T_STRING]: "string js-string",
-			[T_REGEX]: "regex",
-			[T_OPERATOR]: "operator js-operator",
-		},
-	);
-})(window);
-</pre
+	w["Colorful"]["tokenClasses"] = Object.assign(w["Colorful"]["tokenClasses"], {
+		[T_NAME]: "name js-name",
+		[T_OBJECTPROP]: "objprop",
+		[T_OBJECTPROPINOBJ]: "objprop object-prop-in-obj",
+		[T_KEY]: "keyword js-keyword",
+		[T_COMMENT]: "comment js-comment",
+		[T_NUMBER]: "number js-number",
+		[T_ARGUMENT]: "argument",
+		[T_BUILTIN]: "builtIn js-builtIn",
+		[T_METHOD]: "method js-method",
+		[T_METHODASOBJPROP]: "method js-method method-as-obj-prop",
+		[T_STRING]: "string js-string",
+		[T_REGEX]: "regex",
+		[T_OPERATOR]: "operator js-operator",
+	});
+})(window);</pre
         >
       </div>
     </div>
