--- a/extensions/Precisifier/test/index.html
+++ b/extensions/Precisifier/test/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test</title>
     <link rel="stylesheet" href="../../../src/style.css" />
     <link rel="stylesheet" href="style.css" />
@@ -92,16 +89,12 @@
       </div>
       <div class="checklists">
         <label
-          ><input
-            type="checkbox"
-            name="removeComment"
-            id="removeComment"
-          />
+          ><input type="checkbox" name="removeComment" id="removeComment" />
           Remove comment</label
         >
         <label
-          ><input type="checkbox" name="removeWS" id="removeWS" />
-          Remove whitespace</label
+          ><input type="checkbox" name="removeWS" id="removeWS" /> Remove
+          whitespace</label
         >
       </div>
       <div class="finish">
@@ -117,9 +110,7 @@ function log (msg) {
       <div class="output-container">
         <div class="actions">
           <h3>Output</h3>
-          <button id="btn-copy-output" class="btn-finish">
-            Copy
-          </button>
+          <button id="btn-copy-output" class="btn-finish">Copy</button>
         </div>
         <pre id="output-code"></pre>
       </div>
