Changed public directory

--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Editor</title>
-    <link rel="stylesheet" href="../src/style.css" />
     <link rel="stylesheet" href="./main.css" />
-    <!-- <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/src/core.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/src/JavaScript.js" defer></script> -->
-    <script src="../src/core.js" defer></script>
-    <script src="../src/HTML.js" defer></script>
-    <script src="../src/JavaScript.js" defer></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/dist/style.css" />
+    <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/dist/core.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/dist/JavaScript.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/gh/Roopesh2/Colorful@master/dist/HTML.min.js" defer></script>
   </head>
 
   <body>
     <h1>Colorful</h1>
-    <p>A JavaScript library that higlights JavaScript codes</p>
-    <p>Examples:</p>
+    <p>A JavaScript library that higlights JavaScript & HTML codes</p>
+		<hr color="#fff" size="1">
+    <h3>Examples:</h3>
     <div class="container">
       <div class="block">
         <p>HTML Code</p>
